# SmartHub

./: .gitignore  README
common/: CMakeLists.txt  library.json  smarthub_protocol.h
common/cjson/: CMakeLists.txt
hub_linux/: CMakeLists.txt
hub_linux/include/: common.h
hub_linux/src/: arduino_serial.c  common.c  device_io.c  esp32_mqtt.c  hub_commands.c  main.c
node_arduino/: platformio.ini
node_arduino/include/: common.h
node_arduino/src/: arduino_sensors.cpp  main.cpp  protocol_handler.cpp  serial_handler.cpp
node_esp32/: CMakeLists.txt  platformio.ini
node_esp32/components/dht/: CMakeLists.txt
node_esp32/src/: config.h  dht11.c  main.c  protocol_handler.c  wifi_mqtt.c
